--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html lang="en-CA" style="background-color:powderblue">
   <head>
   <meta charset="UTF-8">
   <title>GitHub Setup</title>
   <!-- Made by <Tracey Chen> on <Jan 29,2025> -->
   </head>
-  <body style="background-color:powderblue">
+  <body>
   <img src="b59.gif" alt="My Meme">
   <h1>Tracey Chen</h1>
   <h2>GitHub Setup Complete!</h2>
